Removed 'in nursery'

--- a/study_assets_root/Community/parent_questionnaire_sec2.html
+++ b/study_assets_root/Community/parent_questionnaire_sec2.html
@@ -169,7 +169,7 @@ var familyinfo = {
 var otherinfo = {
     type: 'other-info',
     preamble: header + "<h2>SECTION 2: LANGUAGE BACKGROUND ASSESSMENT</h2> <b> Other Language Exposure </b> <br>2.6.2 Please fill out the table below. This time, in the first column, please indicate <b>other individuals</b> who talk to the child at least once a week." +
-    "<br><i><b>Example:</b> teachers, daycare workers in nursery, friends, etc.</i><br>" +
+    "<br><i><b>Example:</b> teachers, daycare workers, friends, etc.</i><br>" +
     	"<br> In the second column, please indicate which language(s), other than English, that each individual speaks around your child." +
       ' <br> <i><b>Example:</b> If Chidi is spoken to by his teacher who speaks English and daycare worker who speaks English and French, their entries would be:' +
         ' Teacher: English; Daycare worker: English; French</i><br>' +
