--- a/study_assets_root/alienology_followup/consent_language_bg.html
+++ b/study_assets_root/alienology_followup/consent_language_bg.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="shared_assets/jspsych.js"></script>
-    <script src="shared_assets/plugin-instructions.js"></script>
-    <script src="shared_assets/plugin-html-button-response.js"></script>
-    <script src="shared_assets/plugin-survey.js"></script>
+    <script src="shared_assets/jspsych-7.2/dist/jspsych.js"></script>
+    <script src="shared_assets/jspsych-7.2/dist/plugin-instructions.js"></script>
+    <script src="shared_assets/jspsych-7.2/dist/plugin-html-button-response.js"></script>
+    <script src="shared_assets/jspsych-7.2/dist/plugin-survey.js"></script>
     <script src="jatos.js"></script>
-    <link rel="stylesheet" href="shared_assets/jspsych.css">
+    <link rel="stylesheet" href="shared_assets/jspsych-7.2/dist/jspsych.css">
   </head>
   <body></body>
   <script>
