--- a/study_assets_root/alienology_followup/same_paradigm.html
+++ b/study_assets_root/alienology_followup/same_paradigm.html
@@ -7,7 +7,7 @@
     <script src="shared_assets/jspsych-7.2/dist/plugin-html-button-response.js"></script>
     <script src="shared_assets/jspsych-7.2/dist/plugin-preload.js"></script>
     <script src="jatos.js"></script>
-    <link rel="stylesheet" href="shared_assets/dist/jspsych.css">
+    <link rel="stylesheet" href="shared_assets/jspsych-7.2/dist/jspsych.css">
   </head>
   <body></body>
   <script>
