Adding on_close data saving

--- a/study_assets_root/alienology_followup/same_paradigm.html
+++ b/study_assets_root/alienology_followup/same_paradigm.html
@@ -14,9 +14,14 @@
 jatos.onLoad(function() {
   var jsPsych = initJsPsych({
     on_finish: function() {
-      jsPsych.data.displayData('csv')
+      //jsPsych.data.displayData('csv')
       var resultData = jsPsych.data.get().filter({trial_type: 'audio-button-response'}).ignore('internal_node_id').ignore('success').ignore('timeout').ignore('failed_images').ignore('failed_video');
       jatos.submitResultData(resultData.csv(),jatos.endStudy);
+	    
+    }
+    on_close: function() {
+       var resultData = jsPsych.data.get().filter({trial_type: 'audio-button-response'}).ignore('internal_node_id').ignore('success').ignore('timeout').ignore('failed_images').ignore('failed_video');
+       jatos.endStudy(resultData.json());
     }
   });
 
