--- a/study_assets_root/alienology_followup/same_paradigm.html
+++ b/study_assets_root/alienology_followup/same_paradigm.html
@@ -21,7 +21,7 @@ jatos.onLoad(function() {
     },
     on_close: function() {
        var resultData = jsPsych.data.get().filter({trial_type: 'audio-button-response'}).ignore('internal_node_id').ignore('success').ignore('timeout').ignore('failed_images').ignore('failed_video');
-       jatos.endStudy(resultData.json());
+       jatos.endStudy(resultData.csv());
     }
   });
 
