--- a/study_assets_root/LEAPQ/LEAP_questionnaire_20220630.html
+++ b/study_assets_root/LEAPQ/LEAP_questionnaire_20220630.html
@@ -46,7 +46,7 @@ jatos.onLoad(function() {
         var header = "<div class='box'><img id='logo' src='shared_assets/img/langdev-logo.jpg' alt='LangDev Lab Logo' </img></div><h1>Language Learning & Development Lab Questionnaire</h1>";
 
         //introduction
-        let introduction = header + "<p>Welcome to the LangDev Lab study! This survey asks you about language experience and proficiency.</p><p>Please finish it prior to your scheduled appointment. It will take approximately 10-30 minutes.</p>"
+        let introduction = header + "<p>Welcome to the LangDev Lab study! This survey asks you about language experience and proficiency.</p><p>Please answer the questions for yourself instead of your child.</p><p>Please finish it prior to your scheduled appointment. It will take approximately 10-30 minutes.</p>"
 
         var introscreen = {
                 type: jsPsychHtmlButtonResponse,
