--- a/study_assets_root/Accentadaptation/Accent_adaptation_study.html
+++ b/study_assets_root/Accentadaptation/Accent_adaptation_study.html
@@ -165,7 +165,7 @@
     var instructions= {
       type: jsPsychInstructions,
       pages: [
-        'In this experiment, you will hear a number of short audio clips. From 1 to 9, you need to rate how non-native the accents in the audio clips sound,based on standard Canadian English. 1 stands for a completely native accent and 9 stands for a very strong non-native accent. The following 3 practice trials will give you examples of how these sentences sound. Press continue if you are ready to begin the practice trials.'
+        'In this experiment, you will hear a number of short audio clips. From 1 to 9, you need to rate how non-native the accents in the audio clips sound,based on standard Canadian English. 1 stands for a completely native accent and 9 stands for a very strong non-native accent. The following 3 practice trials will give you examples of how these sentences sound. Please put on your headphones/earphones now and press continue if you are ready to begin the practice trials.'
     ],
       button_label_next:"Continue",
       show_clickable_nav: true,
@@ -568,7 +568,7 @@ timeline.push(survey1);
     //Ending message
     var Goodbye = {
       type: jsPsychHtmlKeyboardResponse,
-      stimulus: "Thank you for your participation. Please copy the code C8LENY0X to Prolific to receive the payment. Afterwards, you may exit your browser and end the experiment",
+      stimulus: "Thank you for your participation. Please write down the code C8LENY0X and enter it in Prolific to receive the payment. Afterwards, you may exit your browser and end the experiment",
     };
     timeline.push(Goodbye)
 
