--- a/study_assets_root/Accentadaptation/Accent_adaptation_study.html
+++ b/study_assets_root/Accentadaptation/Accent_adaptation_study.html
@@ -558,7 +558,7 @@ timeline.push(survey1);
           {prompt: '6.  What is the medium of exposure to each of the accented English (non-native accents) ? Please list the accented English and the respective medium of exposure here (e.g. Mandarin-accented English:parents, French-accented English:friends. If you are not familiar with any accented English, put N/A below): ', placeholder: 'enter accents and medium of exposure here separated by a comma (eg. Mandarin-accented English:parents, French-accented English:friends,... Max 250 char.),', required: true, rows: 2,
           name: "Media Exposure"},
           {prompt: '7.  How many hours are you exposed to each of the accented English (non-native accents) in a week (please self-estimate)? Please list the accented English and the respective weekly hours of exposure here (e.g. Mandarin-accented English:21 hours, French-accented English:14 hours, etc. If you are not familiar with any accented English, put N/A below): ', placeholder: 'enter accents and hours of exposure here separated by a comma (e.g. Mandarin-accented English:21 hours, French-accented English:14 hours,... Max 250 char.),', required: true, rows: 2,
-          name: "Media Exposure"},
+          name: "Hours of Exposure"},
         ]
      };
      timeline.push(survey)
