--- a/study_assets_root/Accentadaptation/Accent_adaptation_word_eng.html
+++ b/study_assets_root/Accentadaptation/Accent_adaptation_word_eng.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>English word identidication Study - Minimal Pairs</title>
+    <title>English word identification Study - Minimal Pairs</title>
     <script src="https://unpkg.com/jspsych@7.3.2"></script>
     <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@1.1.2"></script>
     <script src="https://unpkg.com/@jspsych/plugin-audio-button-response@1.1.2"></script>
